# UrBackBuddyAI-v1.1

./: ARCHITECTURE.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
posture-sense/: package-lock.json  package.json  tailwind.config.js
posture-sense/src/: App.tsx  index.css
posture-sense/src-tauri/: Cargo.toml  tauri.conf.json
posture-sense/src-tauri/src/: lib.rs  main.rs
posture-sense/src/screens/: Dashboard.tsx  Settings.tsx
posture-sense/src/services/: bridge.ts
posture-sense/src/store/: useAppStore.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  posturesense.db  tauri.conf.json
src-tauri/onnxruntime-osx-arm64-1.17.3/lib/: libonnxruntime.dylib
src-tauri/onnxruntime-osx-arm64-1.17.3/lib/libonnxruntime.1.17.3.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libonnxruntime.1.17.3.dylib.yml
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  pose.rs  state.rs
src/api/: reports.ts
src/components/: HistoryView.tsx  Layout.tsx  PoseOverlay.tsx  PrivacyLog.tsx  SettingsView.tsx  Sidebar.tsx
src/components/dashboard/: Buddy3D.tsx  CameraControlCard.tsx  CoachingPlan.tsx  GlobalScore.tsx  PenguinBuddy.tsx  PrivacyAccordion.tsx  PrivacyPromiseCard.tsx  Robot3D.tsx  RobotBuddy.tsx  ScoreGrid.tsx
src/context/: ThemeContext.tsx
src/hooks/: usePoseDetection.ts
src/pages/: DailyReport.tsx  Dashboard.tsx  Journey.tsx  Privacy.tsx  Reports.tsx  Settings.tsx
src/screens/: Dashboard.tsx
src/services/: bridge.ts
src/stores/: useAppStore.ts
src/utils/: postureMath.ts
(+1 files in other folders)
