[package]
name = "tauri-app"
version = "0.1.0"
description = "PostureSense Privacy Engine"
authors = ["you"]
edition = "2021"

# --- DELETED [lib] SECTION ---

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"

# PostureSense Privacy Stack
nokhwa = { version = "0.10.4", features = ["input-native", "output-threaded"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
image = { version = "0.24", features = ["jpeg", "png", "default"] }

# THE AI BRAIN
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"] }
ndarray = "0.15"
